tests/ui/consts/const-eval/ub-int-array.stderr
error[E0080]: constructing invalid value at [0]: encountered uninitialized memory, but expected an integer
  --> $DIR/ub-int-array.rs:21:5
   |
LL | /     mem::transmute([
LL | |
LL | |         MaybeUninit { uninit: () },
...  |
LL | |         MaybeUninit::new(0x22222222),
LL | |     ])
   | |______^ evaluation of `UNINIT_INT_0` failed here

error[E0080]: constructing invalid value at [1]: encountered uninitialized memory, but expected an integer
  --> $DIR/ub-int-array.rs:30:5
   |
LL | /     mem::transmute([
LL | |
LL | |         MaybeUninit::new(0u8),
LL | |         MaybeUninit::new(0u8),
...  |
LL | |         MaybeUninit::new(2u8),
LL | |     ])
   | |______^ evaluation of `UNINIT_INT_1` failed here

error[E0080]: constructing invalid value at [2]: encountered uninitialized memory, but expected an integer
  --> $DIR/ub-int-array.rs:47:5
   |
LL | /     mem::transmute([
LL | |
LL | |         MaybeUninit::new(0u8),
LL | |         MaybeUninit::new(0u8),
...  |
LL | |         MaybeUninit { uninit: () },
LL | |     ])
   | |______^ evaluation of `UNINIT_INT_2` failed here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
